--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -7,16 +7,15 @@
   scroll-behavior: smooth;
 }
 
-
 :root {
-  --color-brand-1: #6741D9;
-  --color-brand-2: #5F3DC4;
-  --color-grey-1:  #212529;
-  --color-grey-2:  #343a40;
-  --color-grey-3:  #dee2e6;
-  --color-grey-4:  #e9ecef;
-  --color-grey-5:  #f1f3f5;
-  --color-grey-6:  #ffffff;
+  --color-brand-1: #6741d9;
+  --color-brand-2: #5f3dc4;
+  --color-grey-1: #212529;
+  --color-grey-2: #343a40;
+  --color-grey-3: #dee2e6;
+  --color-grey-4: #e9ecef;
+  --color-grey-5: #f1f3f5;
+  --color-grey-6: #ffffff;
   --radius-default: 0.5rem;
 
   --title-1: 3rem;
@@ -25,9 +24,9 @@
   --title-4: 1.375rem;
   --title-5: 1.125rem;
 
-  --text-1:  1.125rem;
-  --text-2:  1rem;
-  --text-3:  0.875rem;
+  --text-1: 1.125rem;
+  --text-2: 1rem;
+  --text-3: 0.875rem;
 }
 
 body {
@@ -41,79 +40,85 @@ body {
   padding: 0 1rem;
 }
 
-
-
-ul{
+ul {
   list-style: none;
 }
 
-body{ 
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #808080;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
+
+body {
   background-color: var(--color-grey-4);
 }
 
-header{
+header {
   background-image: url("../assets/img/bgImg.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-header{
+header {
   padding: 195px 0px;
   height: 800px;
 }
 
-
 /*-----positioning------*/
 
-.marginLeftMax{
+.marginLeftMax {
   margin-left: auto;
 }
 
-.marginOff{
+.marginOff {
   margin-top: -20px;
 }
 
-.flex{
-display: flex;
+.flex {
+  display: flex;
 }
 
-.logo{
+.logo {
   width: 195px;
 }
 
-.alignCenter{
+.alignCenter {
   align-items: center;
-  
 }
 
-.column{
+.column {
   flex-direction: column;
 }
 
-.columnGap1{
+.columnGap1 {
   column-gap: 30px;
 }
 
-.spaceBetween{
+.spaceBetween {
   justify-content: space-between;
 }
-.wrap{
+.wrap {
   flex-wrap: wrap;
 }
 
-.gapRow2{
+.gapRow2 {
   row-gap: 30px;
 }
 
-.gapRow3{
+.gapRow3 {
   row-gap: 60px;
 }
 
-.padding{
+.padding {
   padding: 50px 0;
 }
-
-
-
-
